--- a/_config.yml
+++ b/_config.yml
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Pawel Kudzia,PhD(c),MASc, B.Eng"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  bio              : "PhD Candidate,Engineering Science"
+  location         : "Vancouver,Canada"
+  employer         : "Simon Fraser University"
+  pubmed           : 
+  googlescholar    : "https://scholar.google.com/citations?user=E6ib0I0AAAAJ&hl=en"
+  email            : "pkudzia@sfu.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "@PKudzia_BioMech"
   vine             :
   weibo            :
   xing             :
