--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,11 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
 
   - title: "Research"
     url: /research/    
+
+  - title: "Publications"
+    url: /publications/
 
   - title: "Teaching"
     url: /teaching/    
@@ -12,7 +13,7 @@ main:
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Writing/Blog"
     url: /year-archive/
     
   - title: "CV"
