--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : PKudzia_BioMech
 facebook:
   username               :
   app_id                 :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "@PKudzia_BioMech"
+  twitter          : "PKudzia_BioMech"
   vine             :
   weibo            :
   xing             :
