--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : https://www.youtube.com/channel/UCyMsVut1PkWrUUN_G3wQ4pg
+  youtube          : "https://www.youtube.com/channel/UCyMsVut1PkWrUUN_G3wQ4pg"
   wikipedia        :
 
 
