--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,12 +8,15 @@ main:
     url: /publications/
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /teaching/   
+ 
+  - title: "Outreach"
+    url: /outreach/  
     
   - title: "Portfolio"
     url: /portfolio/
         
-  - title: "Writing/Blog"
+  - title: "Writing"
     url: /year-archive/
     
   - title: "CV"
