--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
     url: /outreach/  
         
   - title: "Writing"
-    url: /year-archive/
+    url: /writing/
     
   - title: "CV"
     url: /cv/
