--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,14 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
+imagesurl		 : "/https://pkudzia.github.io/images/"
+thumbsurl		 : "/https://pkudzia.github.io/thumbs/"
 locale                   : "en-US"
 title                    : "Pawel Kudzia"
 title_separator          : "-"
 name                     : &name "Pawel Kudzia"
 description              : &description "personal description"
-url                      : https://pkudzia.github.io # the base hostname & protocol for your site e.g. "https://pkudzia.github.io"
+url                      : "https://pkudzia.github.io" # the base hostname & protocol for your site e.g. "https://pkudzia.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "pkudzia/pkudzia.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -113,7 +115,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/channel/UCyMsVut1PkWrUUN_G3wQ4pg"
+  youtube          : https://www.youtube.com/channel/UCyMsVut1PkWrUUN_G3wQ4pg
   wikipedia        :
 
 
