--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
 
-  - title: "Research"
-    url: /research/    
+  - title: "Portfolio"
+    url: /portfolio/    
 
   - title: "Publications"
     url: /publications/
