--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "https://www.youtube.com/channel/UCyMsVut1PkWrUUN_G3wQ4pg"
+  youtube          : "UCyMsVut1PkWrUUN_G3wQ4pg"
   wikipedia        :
 
 
