--- a/_config.yml
+++ b/_config.yml
@@ -84,12 +84,12 @@ analytics:
 author:
   name             : "Pawel Kudzia"
   avatar           : "Profile_Pawel.png"
-  bio              : "PhD Candidate"
+  bio              : "PhD in Engineering Science"
   location         : "Vancouver, Canada"
-  employer         : "Simon Fraser University"
+  employer         : "University of British Columbia"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=E6ib0I0AAAAJ&view_op=list_works&sortby=pubdate"
-  email            : "pkudzia@sfu.ca"
+  email            : "pawel.kudzia@ubc.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -115,7 +115,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "UCyMsVut1PkWrUUN_G3wQ4pg"
+  youtube          : "https://www.youtube.com/@BioMechanicLab"
   wikipedia        :
 
 
